// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct accessibility tree properties for state: error 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "name": "Some inline-notification heading.",
                  "role": "StaticText",
                },
              ],
              "role": "none",
            },
          ],
          "level": 5,
          "name": "Some inline-notification heading.",
          "role": "heading",
        },
      ],
      "role": "none",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "name": "Some inline-notification description.",
                  "role": "StaticText",
                },
              ],
              "role": "none",
            },
          ],
          "name": "",
          "role": "paragraph",
        },
      ],
      "role": "none",
    },
  ],
  "description": "Some inline-notification description.",
  "name": "Some inline-notification heading.",
  "role": "alert",
}
`;

exports[`accessibility should expose correct accessibility tree properties for state: neutral 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "name": "Some inline-notification heading.",
                  "role": "StaticText",
                },
              ],
              "role": "none",
            },
          ],
          "level": 5,
          "name": "Some inline-notification heading.",
          "role": "heading",
        },
      ],
      "role": "none",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "name": "Some inline-notification description.",
                  "role": "StaticText",
                },
              ],
              "role": "none",
            },
          ],
          "name": "",
          "role": "paragraph",
        },
      ],
      "role": "none",
    },
  ],
  "description": "Some inline-notification description.",
  "name": "Some inline-notification heading.",
  "role": "status",
}
`;

exports[`accessibility should expose correct accessibility tree properties for state: success 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "name": "Some inline-notification heading.",
                  "role": "StaticText",
                },
              ],
              "role": "none",
            },
          ],
          "level": 5,
          "name": "Some inline-notification heading.",
          "role": "heading",
        },
      ],
      "role": "none",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "name": "Some inline-notification description.",
                  "role": "StaticText",
                },
              ],
              "role": "none",
            },
          ],
          "name": "",
          "role": "paragraph",
        },
      ],
      "role": "none",
    },
  ],
  "description": "Some inline-notification description.",
  "name": "Some inline-notification heading.",
  "role": "status",
}
`;

exports[`accessibility should expose correct accessibility tree properties for state: warning 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "name": "Some inline-notification heading.",
                  "role": "StaticText",
                },
              ],
              "role": "none",
            },
          ],
          "level": 5,
          "name": "Some inline-notification heading.",
          "role": "heading",
        },
      ],
      "role": "none",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "name": "Some inline-notification description.",
                  "role": "StaticText",
                },
              ],
              "role": "none",
            },
          ],
          "name": "",
          "role": "paragraph",
        },
      ],
      "role": "none",
    },
  ],
  "description": "Some inline-notification description.",
  "name": "Some inline-notification heading.",
  "role": "alert",
}
`;
